--- a/webd/1menu/menu-1.html
+++ b/webd/1menu/menu-1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M-1</title>
+    <title>Document</title>
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         * {
@@ -96,7 +96,6 @@
         }
 
         /* nav */
-
         .nav>ul {
             display: flex;
             justify-content: right;
@@ -108,9 +107,9 @@
         }
 
         .nav>ul>li>a {
-            display: inline-block;
+            background-color: #696969;
             padding: 10px 50px;
-            background-color: #b0b0b0;
+            display: inline-block;
         }
 
         .nav>ul>li>a:hover {
@@ -121,17 +120,17 @@
             display: none;
             position: absolute;
             left: 0;
-            top: 39px;
-            background-color: #c7c7c7;
+            top: 38px;
+            background-color: #696969;
             width: 100%;
             text-align: center;
         }
 
         .nav>ul>li>ul>li>a {
-            display: inline-block;
             padding: 10px;
-            background-color: #ababab;
+            display: inline-block;
             width: 100%;
+            background-color: #c7c7c7;
             box-sizing: border-box;
         }
 
@@ -139,10 +138,11 @@
             background-color: #848484;
         }
 
-        /* 자바스크립트용 CSS */
+        /* 자바스크립트 CSS */
         .nav>ul>li>ul {
             display: block;
             height: 0;
+            /* height: 155px; */
             overflow: hidden;
             transition: all 600ms;
         }
@@ -155,36 +155,40 @@
             <div class="logo"></div>
             <nav class="nav">
                 <ul>
-                    <li><a href="#">메뉴1</a>
+                    <li>
+                        <a href="#">메뉴1</a>
                         <ul class="submenu">
-                            <li><a href="#">메뉴1-1</a></li>
-                            <li><a href="#">메뉴1-2</a></li>
-                            <li><a href="#">메뉴1-3</a></li>
-                            <li><a href="#">메뉴1-4</a></li>
+                            <li><a href="#">서브메뉴1-1</a></li>
+                            <li><a href="#">서브메뉴1-2</a></li>
+                            <li><a href="#">서브메뉴1-3</a></li>
+                            <li><a href="#">서브메뉴1-4</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">메뉴2</a>
+                    <li>
+                        <a href="#">메뉴2</a>
                         <ul class="submenu">
-                            <li><a href="#">메뉴2-1</a></li>
-                            <li><a href="#">메뉴2-2</a></li>
-                            <li><a href="#">메뉴2-3</a></li>
-                            <li><a href="#">메뉴2-4</a></li>
+                            <li><a href="#">서브메뉴2-1</a></li>
+                            <li><a href="#">서브메뉴2-2</a></li>
+                            <li><a href="#">서브메뉴2-3</a></li>
+                            <li><a href="#">서브메뉴2-4</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">메뉴3</a>
+                    <li>
+                        <a href="#">메뉴3</a>
                         <ul class="submenu">
-                            <li><a href="#">메뉴3-1</a></li>
-                            <li><a href="#">메뉴3-2</a></li>
-                            <li><a href="#">메뉴3-3</a></li>
-                            <li><a href="#">메뉴3-4</a></li>
+                            <li><a href="#">서브메뉴3-1</a></li>
+                            <li><a href="#">서브메뉴3-2</a></li>
+                            <li><a href="#">서브메뉴3-3</a></li>
+                            <li><a href="#">서브메뉴3-4</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">메뉴4</a>
+                    <li>
+                        <a href="#">메뉴4</a>
                         <ul class="submenu">
-                            <li><a href="#">메뉴4-1</a></li>
-                            <li><a href="#">메뉴4-2</a></li>
-                            <li><a href="#">메뉴4-3</a></li>
-                            <li><a href="#">메뉴4-4</a></li>
+                            <li><a href="#">서브메뉴4-1</a></li>
+                            <li><a href="#">서브메뉴4-2</a></li>
+                            <li><a href="#">서브메뉴4-3</a></li>
+                            <li><a href="#">서브메뉴4-4</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -213,11 +217,9 @@
     <!-- //wrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
-        // jquery용
         // $(function () {
         //     $(".nav>ul>li").mouseover(function () {  //메뉴에 오버했을 때 서브메뉴를 보여줘라!
-        //         // console.log("dd")
-        //         $(this).find(".submenu").stop().slideDown();   //내가 오버한 것을 알고 싶을 때
+        //         $(this).find(".submenu").stop().slideDown();
         //     });
         //     $(".nav>ul>li").mouseout(function () {
         //         $(this).find(".submenu").stop().slideUp();
@@ -225,22 +227,22 @@
         // });
     </script>
     <script>
-        // javascript용 
-        window.onload = function () {
-            let navList = document.querySelectorAll(".nav>ul>li");
-            //console.log(navList) 원하는데이터를 변수에 저장한걸 확인
-            navList.forEach(function (navItem) {  //navList가 여러개일 경우 forEach 메서드를 사용 후 실행(한문장), navList 4개를 navItem으로 지정
-                navItem.addEventListener("mouseover", function () {  //navItem에 마우스오버 했을 때 실행시켜라!
-                    this.querySelector(".submenu").style.height = "155px"; //내가 오버한 것을 알고 싶을 때
+        window.onload = function () {  //웹 페이지의 모든 요소가 로드된 후에 JavaScript 코드를 실행하는 이벤트
+            let navList = document.querySelectorAll(".nav>ul>li")  // $(".nav>ul>li") 이부분을 의미/HTML 문서에서 클래스가 "nav"인 요소의 하위에 있는 모든 <li> 요소를 선택, navList에 값을 담음
+
+            navList.forEach(function (navItem) {  //각각의 <li> 요소에 대해 함수를 실행, 이 함수는 navItem이라는 이름으로 각 요소에 대해 호출됨. 여기서 navItem은 navList에 있는 각 요소를 칭함.
+                navItem.addEventListener("mouseover", function () {  //mouseover 이벤트에 대한 리스너를 추가함. 마우스가 요소 위로 이동할 때 실행되며, 
+                    this.querySelector(".submenu").style.height = "155px";  //this는 현재 이벤트가 발생한 요소, 즉 각각의 네비게이션 항목(<li>)을 가리킴. querySelector(".submenu")는 현재 네비게이션 항목(<li>) 내에서 클래스가 "submenu"인 요소를 찾음, .style.height = "155px"는 선택된 .submenu 요소의 높이를 155px로 설정, 이것은 마우스를 해당 네비게이션 항목 위로 움직였을 때, 드롭다운 메뉴가 펼쳐지도록 만듦. 이때 .submenu은 보통 숨겨져 있어서 높이 0으로 설정되어 있어야 함.
                 });
             });
             navList.forEach(function (navItem) {
                 navItem.addEventListener("mouseout", function () {
-                    this.querySelector(".submenu").style.height = "0";
+                    this.querySelector(".submenu").style.height = "0px";
                 });
             });
         };
     </script>
 </body>
+
 
 </html>
