--- a/webd/site/siteA/index.html
+++ b/webd/site/siteA/index.html
@@ -4,43 +4,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>유진건설</title>
+  <title>강원천문대</title>
+  <!-- css -->
   <link rel="stylesheet" href="css/style.css">
+  <!-- script -->
+  <script src="script/jquery.min.js"></script>
+  <script src="script/script.js"></script>
 </head>
 
 <body>
   <div id="wrap">
     <header id="header">
       <h1 class="logo">
-        <a href="#">유진건설</a>
+        <a href="#">강원천문대</a>
       </h1>
       <nav class="nav">
         <ul>
-          <li><a href="#">회사소개</a>
-            <ul>
+          <li><a href="#">강원천문대</a>
+            <ul class="submenu">
+              <li><a href="#">천문대소개</a></li>
               <li><a href="#">인사말</a></li>
-              <li><a href="#">조직구성도</a></li>
               <li><a href="#">오시는길</a></li>
             </ul>
           </li>
-          <li><a href="#">사업영역</a>
-            <ul>
-              <li><a href="#">전원주택</a></li>
-              <li><a href="#">도시재생</a></li>
-              <li><a href="#">인테리어</a></li>
+          <li><a href="#">이용안내</a>
+            <ul class="submenu">
+              <li><a href="#">프로그램</a></li>
+              <li><a href="#">관람시간표</a></li>
+              <li><a href="#">이달의 별자리</a></li>
             </ul>
           </li>
-          <li><a href="#">입주정보</a>
-            <ul>
-              <li><a href="#">입주단지</a></li>
-              <li><a href="#">입주캘린더</a></li>
+          <li><a href="#">천문대예약</a>
+            <ul class="submenu">
+              <li><a href="#">예약하기</a></li>
+              <li><a href="#">예약확인</a></li>
+              <li><a href="#">예약취소</a></li>
             </ul>
           </li>
-          <li><a href="#">고객센터</a>
-            <ul>
+          <li><a href="#">커뮤니티</a>
+            <ul class="submenu">
               <li><a href="#">공지사항</a></li>
-              <li><a href="#">건축상담</a></li>
-              <li><a href="#">홍보자료실</a></li>
+              <li><a href="#">방문후기</a></li>
+              <li><a href="#">자유게시판</a></li>
             </ul>
           </li>
         </ul>
@@ -49,145 +54,79 @@
     <!-- //header -->
 
     <article id="slider">
-      <div class="slider-wrap">
+      <div class="sliderWrap">
         <div class="slider s1">
-          <a href="#"><img src="images/banner01.jpg" alt="미래를 구축하는 혁신"></a>
+          <a href="#"><img src="images/slider01.jpg" alt="천문과학교육관 시설소개"></a>
           <div class="text">
-            <h2>미래를 구축하는 혁신</h2>
-            <p>여러분의 비전을 현실로 만들어드립니다.</p>
+            <h2>천문과학교육관 시설소개</h2>
+            <p>천문과학관으로 놀러오세요!</p>
           </div>
         </div>
         <div class="slider s2">
-          <img src="images/banner02.jpg" alt="안전과 품질을 최우선으로..">
+          <a href="#"><img src="images/slider02.jpg" alt="천문과학교육관 이용안내"></a>
           <div class="text">
-            <h2>안전과 품질을 최우선으로..</h2>
-            <p>고객 만족을 넘어 고객 감동 추구</p>
+            <h2>천문과학교육관 이용안내</h2>
+            <p>천문과학관으로 놀러오세요!</p>
           </div>
         </div>
         <div class="slider s3">
-          <img src="images/banner03.jpg" alt="지속 가능한 건축을 선도">
+          <a href="#"><img src="images/slider03.jpg" alt="천문과학교육관 소개"></a>
           <div class="text">
-            <h2>지속 가능한 건축을 선도</h2>
-            <p>환경을 생각하는 건설 솔루션</p>
+            <h2>천문과학교육관 소개</h2>
+            <p>천문과학관으로 놀러오세요!</p>
           </div>
         </div>
-      </div>
     </article>
     <!-- //slider -->
 
-    <main id="main">
-      <section class="notice">
-        <h3>공지사항</h3>
-        <div>
-          <ul>
-            <li><a href="#">미래를 건설하는 혁신적인 건설</a><span>2024.04.04</span></li>
-            <li><a href="#">유진 건설 주주 총회</a><span>2024.04.07</span></li>
-            <li><a href="#">유진 건설 세미나실 이용안내</a><span>2024.04.08</span></li>
-            <li><a href="#">건설학자 세미나 신청 방법</a><span>2024.04.12</span></li>
-          </ul>
+    <main id="contents">
+      <section class="info">
+        <h3 class="info_menu">
+          <a href="#" class="active">공지사항</a> |
+          <a href="#">갤러리</a>
+        </h3>
+        <div class="info_cont">
+          <div class="notice">
+            <ul>
+              <li><a href="#">강원천문대 하절기 휴관일 안내</a><span>2024.04.01</span></li>
+              <li><a href="#">강원천문대 온라인 예매안내</a><span>2024.04.20</span></li>
+              <li><a href="#">강원천문대 휴관일 및 이벤트안내</a><span>2024.05.05</span></li>
+              <li><a href="#">강원천문대 주차장 이용 및 숙박안내</a><span>2024.06.01</span></li>
+            </ul>
+          </div>
+          <div class="gallery">
+            <ul>
+              <li><a href=""><img src="images/Rectangle 57.jpg" alt="독일 천문대"></a></li>
+              <li><a href=""><img src="images/Rectangle 58.jpg" alt="미국 천문대"></a></li>
+              <li><a href=""><img src="images/Rectangle 59.jpg" alt="영국 천문대"></a></li>
+            </ul>
+          </div>
         </div>
       </section>
-      <!-- //notice -->
-
-      <section class="gallery">
-        <h3>갤러리</h3>
-        <ul>
-          <li>
-            <a href="#">
-              <img src="images/gallery01.jpg" alt="건축 이미지1">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="images/gallery02.jpg" alt="건축 이미지2">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="images/gallery03.jpg" alt="건축 이미지3">
-            </a>
-          </li>
-        </ul>
+      <!-- //info -->
+      <section class="banner">
+        <h3>강원천문대 온라인 예매하기</h3>
+        <a href="#">예매하기</a>
       </section>
-      <!-- //gallery -->
-
+      <!-- //banner -->
       <section class="link">
-        <h3>이벤트 바로가기</h3>
-        <a href="#">바로가기</a>
+
       </section>
       <!-- //link -->
     </main>
     <!-- //main -->
 
     <footer id="footer">
-      <div class="left">
-        <div class="menu">
-          <ul>
-            <li><a href="#">개인정보처리방침</a></li>
-            <li><a href="#">저작권 보호정책</a></li>
-            <li><a href="#">이메일 무단수집 거부</a></li>
-            <li><a href="#">CCTV설치 및 운영</a></li>
-          </ul>
-        </div>
-        <div class="copy">
-          COPYRIGHT 2024, All Rights Reserve
-        </div>
-      </div>
-      <div class="right">
-        <select>
-          <option value="1">가나 건설회사</option>
-          <option value="2">다라 건설회사</option>
-          <option value="3">마바 건설회사</option>
-        </select>
+      <div class="footer1"></div>
+      <div class="footer2">
+        <div class="footer2-1"></div>
+        <div class="footer2-2"></div>
       </div>
     </footer>
+    <footer id="footer">
+      <!-- //footer -->
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script>
-    //1차 메뉴 클릭했을 때 경고창 뜨게 해주기
-    // $(function () {
-    //   $(".nav>ul>li").click(function () {
-    //     alert("dd")
-    //   });
-
-    //1차 메뉴 중에 두번째 메뉴를 클릭하면
-    // $(".nav>ul>li:eq(1)").click(function () {
-    //   alert('dd')
-    // });
-
-    //1차 메뉴에 오버 했을 때 1차 메뉴 배경색을 빨간색으로 변경
-    // $(function () {
-    //   $(".nav>ul>li").mouseover(function () {
-    //     $(this).find("a").css("backgroundColor", "red");
-    //   });
-    // });
-
-    // $(".nav>ul>li").mouseover(function () {
-    //   $(".nav>ul>li>ul").stop().fadeIn(500);
-    // });
-
-    // $(".nav>ul>li").mouseout(function () {
-    //   $(".nav>ul>li>ul").stop().fadeOut(500);
-    // });
-
-    // 이미지 슬라이드
-    let currentIndex = 0;
-    $(".slider-wrap").append($(".slider").first().clone(true));  // 첫번째 이미지를 복사해서 마지막에 추가
-
-    setInterval(() => {
-      currentIndex++;  // 현재 이미지 1씩 증가
-      $(".slider-wrap").animate({ marginLeft: -currentIndex * 100 + "%" }, 600);
-
-      if (currentIndex == 3) {   // 마지막 이미지일때
-        setTimeout(() => {
-          $(".slider-wrap").animate({ marginLeft: 0 }, 0);   //애니메이션 정지
-          currentIndex = 0;  // 현재 이미지 초기화
-        }, 700)
-      }
-    }, 3000);
-
-
-  </script>
+  <!-- //wrap -->
 </body>
 
 </html>
