--- a/webd/S2-jquery.html
+++ b/webd/S2-jquery.html
@@ -86,23 +86,17 @@
       background-color: #9d9d9d;
     }
 
-    .sliderWrap>div {
-      display: none;
-    }
-
-    .sliderWrap>div:first-child {
-      display: block;
-    }
-
     /* slider */
+    #slider {
+      overflow: hidden;
+    }
+
     .sliderWrap {
-      position: relative;
+      display: flex;
     }
 
     .sliderWrap .slider {
-      position: absolute;
-      left: 0;
-      top: 0;
+      position: relative;
     }
 
     .sliderWrap .slider img {
@@ -182,13 +176,6 @@
           }, 700);
         }
       }, 3000);
-    });
-  </script>
-
-  <script>
-    $(function () {
-      let currentIndex = 0;
-      $(".sliderWrap")
     });
   </script>
 </body>
