--- a/webd/menu-3.html
+++ b/webd/menu-3.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M-3</title>
+    <title>웹디자인기능사 메뉴 M-3</title>
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         * {
@@ -101,14 +102,22 @@
         }
 
         #header::after {
-            content: '가상';
+            content: '';
+            /* 가상 요소를 사용하여 #header 요소의 뒤에 새로운 콘텐츠를 추가 */
             width: 100%;
-            height: 200px;
-            background-color: #808080;
+            /* 가상 요소의 너비를 #header의 너비와 동일하게 설정 */
+            height: 0;
+            /* 가상 요소의 높이를 0으로 설정 */
             position: absolute;
             left: 0;
             top: 100px;
+            background-color: red;
             z-index: 1;
+        }
+
+        #header.on::after {
+            height: 155px;
+            /* #header 요소가 on 클래스를 가지게 되면, 가상 요소의 높이가 155px로 변경 */
         }
 
         .nav {
@@ -118,7 +127,7 @@
         .nav>ul {
             display: flex;
             justify-content: right;
-            margin-top: 62px;
+            margin-top: 61px;
         }
 
         .nav>ul>li {
@@ -126,106 +135,149 @@
         }
 
         .nav>ul>li>a {
-            background-color: #b0b0b0;
-            padding: 10px 50px;
             display: inline-block;
+            padding: 10px;
+            width: 150px;
+            text-align: center;
+            background-color: #c7c7c7;
         }
 
         .nav>ul>li>a:hover {
-            background-color: #848484;
+            background-color: #fff;
         }
 
         .nav>ul>li>ul {
             /* display: none; */
             position: absolute;
             left: 0;
-            top: 38px;
+            top: 39px;
             width: 100%;
+        }
+
+        .nav>ul>li>ul>li>a {
+            display: inline-block;
+            padding: 10px;
+            background-color: #b1b1b1;
+            width: 100%;
+            box-sizing: border-box;
             text-align: center;
         }
 
-        .nav>ul>li>ul>li {}
-
-        .nav>ul>li>ul>li>a {
-            background-color: #c1c1c1;
-            padding: 10px;
-            display: inline-block;
-            width: 100%;
-            box-sizing: border-box;
-        }
-
         .nav>ul>li>ul>li>a:hover {
-            background-color: #848484;
+            background-color: #fff;
         }
+
+        /* 자바스크립트용 CSS */
+        /* .nav>ul>li>ul {
+            display: block;
+            height: 0;
+            overflow: hidden;
+            transition: all 400ms;
+        } */
     </style>
 </head>
 
 <body>
-    <div id="wrap">
-        <div id="header">
-            <div class="logo"></div>
-            <nav class="nav">
-                <ul>
-                    <li>
-                        <a href="#">메뉴1</a>
-                        <ul class="submenu">
-                            <li><a href="#">서브메뉴1-1</a></li>
-                            <li><a href="#">서브메뉴1-2</a></li>
-                            <li><a href="#">서브메뉴1-3</a></li>
-                            <li><a href="#">서브메뉴1-4</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">메뉴2</a>
-                        <ul class="submenu">
-                            <li><a href="#">서브메뉴2-1</a></li>
-                            <li><a href="#">서브메뉴2-2</a></li>
-                            <li><a href="#">서브메뉴2-3</a></li>
-                            <li><a href="#">서브메뉴2-4</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">메뉴3</a>
-                        <ul class="submenu">
-                            <li><a href="#">서브메뉴3-1</a></li>
-                            <li><a href="#">서브메뉴3-2</a></li>
-                            <li><a href="#">서브메뉴3-3</a></li>
-                            <li><a href="#">서브메뉴3-4</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">메뉴4</a>
-                        <ul class="submenu">
-                            <li><a href="#">서브메뉴4-1</a></li>
-                            <li><a href="#">서브메뉴4-2</a></li>
-                            <li><a href="#">서브메뉴4-3</a></li>
-                            <li><a href="#">서브메뉴4-4</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <!-- //header -->
 
-        <div id="slider">
-        </div>
-        <!-- //slider -->
+    <body>
+        <div id="wrap">
+            <div id="header">
+                <div class="logo"></div>
+                <nav class="nav">
+                    <ul>
+                        <li>
+                            <a href="#">메뉴1</a>
+                            <ul class="submenu">
+                                <li><a href="#">서브메뉴1-1</a></li>
+                                <li><a href="#">서브메뉴1-2</a></li>
+                                <li><a href="#">서브메뉴1-3</a></li>
+                                <li><a href="#">서브메뉴1-4</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">메뉴2</a>
+                            <ul class="submenu">
+                                <li><a href="#">서브메뉴2-1</a></li>
+                                <li><a href="#">서브메뉴2-2</a></li>
+                                <li><a href="#">서브메뉴2-3</a></li>
+                                <li><a href="#">서브메뉴2-4</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">메뉴3</a>
+                            <ul class="submenu">
+                                <li><a href="#">서브메뉴3-1</a></li>
+                                <li><a href="#">서브메뉴3-2</a></li>
+                                <li><a href="#">서브메뉴3-3</a></li>
+                                <li><a href="#">서브메뉴3-4</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">메뉴4</a>
+                            <ul class="submenu">
+                                <li><a href="#">서브메뉴4-1</a></li>
+                                <li><a href="#">서브메뉴4-2</a></li>
+                                <li><a href="#">서브메뉴4-3</a></li>
+                                <li><a href="#">서브메뉴4-4</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- //header -->
 
-        <div id="contents">
-            <div class="content1"></div>
-            <div class="content2"></div>
-            <div class="content3"></div>
-        </div>
-        <!-- //contents -->
+            <div id="slider">
+            </div>
+            <!-- //slider -->
 
-        <div id="footer">
-            <div class="footer1"></div>
-            <div class="footer2"></div>
-            <div class="footer3"></div>
+            <div id="contents">
+                <div class="content1"></div>
+                <div class="content2"></div>
+                <div class="content3"></div>
+            </div>
+            <!-- //contents -->
+
+            <div id="footer">
+                <div class="footer1"></div>
+                <div class="footer2"></div>
+                <div class="footer3"></div>
+            </div>
+            <!-- //footer -->
         </div>
-        <!-- //footer -->
-    </div>
-    <!-- //wrap -->
+        <!-- //wrap -->
+    </body>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>
+        $(function () {
+            $(".nav>ul>li").mouseover(function () {
+                $(".nav>ul>li>ul").stop().fadeIn(1200);
+                $("#header").addClass("on");
+            });
+
+            $(".nav>ul>li").mouseout(function () {
+                $(".nav>ul>li>ul").stop().fadeOut(100);
+                $("#header").remove("on");
+            });
+        });
+    </script>
+    <!-- <script>
+        let navList = document.querySelector(".nav > ul");
+
+        navList.addEventListener("mouseover", () => {
+            navList.querySelectorAll(".submenu").forEach(sub => {
+                sub.style.height = "155px";
+            });
+            document.getElementById("header").classList.add("on");
+        });
+
+        navList.addEventListener("mouseout", () => {
+            navList.querySelectorAll(".submenu").forEach(sub => {
+                sub.style.height = "0px";
+            });
+            document.getElementById("header").classList.remove("on");
+        });
+    </script> -->
 </body>
 
 </html>
