--- a/webd/menu-6.html
+++ b/webd/menu-6.html
@@ -112,48 +112,50 @@
     }
 
     /* nav */
-    .nav {}
+    .nav {
+      z-index: 1000;
+      position: relative;
+    }
+
+    .nav>ul {}
 
     .nav>ul>li {
       position: relative;
     }
 
     .nav>ul>li>a {
-      padding: 10px 20px;
       display: block;
-      background-color: #c7c7c7;
-      text-align: center;
-
+      padding: 10px 20px;
+      background-color: #bcbcbc;
+      box-sizing: border-box;
     }
 
     .nav>ul>li>a:hover {
-      background-color: #848484;
+      background-color: #fff;
     }
 
     .nav>ul>li>ul {
-      /* display: none; */
+      display: none;
       position: absolute;
-      right: -500px;
+      left: 200px;
       top: 0;
-      width: 500px;
-      display: flex;
+      width: 700px;
     }
 
     .nav>ul>li>ul>li {
-      display: inline;
+      display: inline-block;
+      width: 120px;
     }
 
     .nav>ul>li>ul>li>a {
-      padding: 10px;
       display: inline-block;
-
-      background-color: #ccc;
-      text-align: center;
-
+      padding: 10px;
+      width: 100%;
+      box-sizing: border-box;
     }
 
     .nav>ul>li>ul>li>a:hover {
-      background-color: #848484;
+      background-color: #fff;
     }
 
     #main {
@@ -162,14 +164,19 @@
 
     #main::after {
       content: '';
+      width: 0;
+      height: 195px;
+      background-color: red;
       position: absolute;
-      right: 0;
-      top: 0;
-      width: 100%;
-      background-color: #000;
+      left: 0;
+      top: 100px;
+      z-index: 1;
+      transition: all 300ms;
     }
 
-    #main.on::after {}
+    #main.on::after {
+      width: 100%;
+    }
   </style>
 </head>
 
@@ -246,16 +253,19 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script>
-    // $(function () {
-    //   $(".nav>ul>li").mouseover(function () {
-    //     $(".nav>ul>li>ul").stop().fadeIn(300);  //서브메뉴가 다 보여야 하기 때문에 ".nav>ul>li>ul" 선택함
-    //     $("#main").addClass("on");
-    //   });
-    //   $(".nav>ul>li").mouseout(function () {
-    //     $(".nav>ul>li>ul").stop().fadeOut(100);
-    //     $("#main").addClass("on");
-    //   });
-    // });
+
+  </script>
+  <script>
+    $(function () {
+      $(".nav>ul>li").mouseover(function () {
+        $(".nav>ul>li>ul").stop().fadeIn(300);  //서브메뉴가 다 보여야 하기 때문에 ".nav>ul>li>ul" 선택함
+        $("#main").addClass("on");
+      });
+      $(".nav>ul>li").mouseout(function () {
+        $(".nav>ul>li>ul").stop().fadeOut(100);
+        $("#main").removeClass("on");
+      });
+    });
   </script>
   <script>
     // window.onload = function () {
