--- a/webd/slider-3.html
+++ b/webd/slider-3.html
@@ -92,6 +92,8 @@
       overflow: hidden;
     }
 
+    .sliderWrap {}
+
     .sliderWrap .slider {
       position: relative;
     }
@@ -105,9 +107,9 @@
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
+      padding: 10px 20px;
       background-color: rgba(0, 0, 0, 0.3);
       color: #fff;
-      padding: 10px 20px;
     }
   </style>
 </head>
@@ -122,17 +124,23 @@
 
     <article id="slider">
       <div class="sliderWrap">
-        <div class="slider s1">
-          <img src="https://webstoryboy.github.io/webstoryboy/w_webd/slider/slider01.jpg" alt="이미지 설명">
-          <span>이미지1</span>
+        <div class="slider">
+          <div class="text">
+            <img src="https://webstoryboy.github.io/webstoryboy/w_webd/slider/slider01.jpg" alt="#">
+            <span>이미지1</span>
+          </div>
         </div>
-        <div class="slider s2">
-          <img src="https://webstoryboy.github.io/webstoryboy/w_webd/slider/slider02.jpg" alt="이미지 설명">
-          <span>이미지2</span>
+        <div class="slider">
+          <div class="text">
+            <img src="https://webstoryboy.github.io/webstoryboy/w_webd/slider/slider02.jpg" alt="#">
+            <span>이미지2</span>
+          </div>
         </div>
-        <div class="slider s3">
-          <img src="https://webstoryboy.github.io/webstoryboy/w_webd/slider/slider03.jpg" alt="이미지 설명">
-          <span>이미지3</span>
+        <div class="slider">
+          <div class="text">
+            <img src="https://webstoryboy.github.io/webstoryboy/w_webd/slider/slider03.jpg" alt="#">
+            <span>이미지3</span>
+          </div>
         </div>
       </div>
     </article>
@@ -154,7 +162,24 @@
   </div>
   <!-- //wrap -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script>
+    $(function () {
+      let currentIndex = 0;
+      $(".sliderWrap").append($(".slider").first().clone());
 
+      setInterval(function () {
+        currentIndex++;
+        $(".sliderWrap").animate({ marginTop: -currentIndex * 300 + "px" }, 600);
+
+        if (currentIndex == 3) {
+          setTimeout(function () {
+            $(".sliderWrap").animate({ marginTop: 0 }, 0);
+            currentIndex = 0;
+          });
+        }
+      }, 3000);
+    });
+  </script>
   <script>
     // $(function () {
     //   let currentIndex = 0;   //현재 이미지 설정
@@ -173,30 +198,7 @@
     //   }, 3000);
     // });
   </script>
-  <script>
-    window.onload = function () {
-      let currentIndex = 0;   //현재 이미지 설정
-      const sliderWrap = document.querySelector(".sliderWrap");   //전체 이미지
-      const slider = document.querySelectorAll(".slider");    //각각의 이미지
-      const sliderClone = sliderWrap.firstElementChild.cloneNode(true);   //첫번째 이미지를 저장 
-      sliderWrap.appendChild(sliderClone);
 
-      setInterval(() => {     //3초에 한번씩 실행
-        currentIndex++;     //현재 이미지 1씩 증가
-        sliderWrap.style.transition = "all 0.6s";   //애니메이션 추가
-        sliderWrap.style.marginTop = -currentIndex * 300 + "px";    //이미지 이동
-
-        if (currentIndex == slider.length) {  //마지막 이미지
-          setTimeout(() => {
-            sliderWrap.style.transition = "0s";     //애니메이션 정지
-            sliderWrap.style.marginTop = "0";       //이미지 위치 초기화
-            currentIndex = 0;   //현재 이미지 초기화
-          }, 700);
-        }
-      }, 3000);
-    }
-
-  </script>
 
 </body>
 
